--- a/Index.html
+++ b/Index.html
@@ -7,28 +7,39 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="building">
+   
+     <div class="building">
         <!-- Ground Floor -->
         <div class="floor" id="floor-0">
             <div class="floor-info">
                 <div class="floor-number">Ground Floor</div>
                 <div class="buttons">
                     <div class="control">
-                        <button class="up">Up</button>
-                        <button class="down">Down</button>
+                        <button class="up">▲</button>
+                        <button class="down">▼</button>
                     </div>
+                    <div class="empty-box"></div>
+                </div>
+                <div class="buttons">
                     <div class="control">
-                        <button class="up">Up</button>
-                        <button class="down">Down</button>
+                        <button class="up">▲</button>
+                        <button class="down">▼</button>
                     </div>
+                    <div class="empty-box"></div>
+                </div>
+                <div class="buttons">
                     <div class="control">
-                        <button class="up">Up</button>
-                        <button class="down">Down</button>
+                        <button class="up">▲</button>
+                        <button class="down">▼</button>
                     </div>
+                    <div class="empty-box"></div>
+                </div>
+                <div class="buttons">
                     <div class="control">
-                        <button class="up">Up</button>
-                        <button class="down">Down</button>
+                        <button class="up">▲</button>
+                        <button class="down">▼</button>
                     </div>
+                    <div class="empty-box"></div>
                 </div>
             </div>
             <div class="lifts">
@@ -45,21 +56,31 @@
                 <div class="floor-number">Floor 1</div>
                 <div class="buttons">
                     <div class="control">
-                        <button class="up">Up</button>
-                        <button class="down">Down</button>
+                        <button class="up">▲</button>
+                        <button class="down">▼</button>
                     </div>
+                    <div class="empty-box"></div>
+                </div>
+                <div class="buttons">
                     <div class="control">
-                        <button class="up">Up</button>
-                        <button class="down">Down</button>
+                        <button class="up">▲</button>
+                        <button class="down">▼</button>
                     </div>
+                    <div class="empty-box"></div>
+                </div>
+                <div class="buttons">
                     <div class="control">
-                        <button class="up">Up</button>
-                        <button class="down">Down</button>
+                        <button class="up">▲</button>
+                        <button class="down">▼</button>
                     </div>
+                    <div class="empty-box"></div>
+                </div>
+                <div class="buttons">
                     <div class="control">
-                        <button class="up">Up</button>
-                        <button class="down">Down</button>
+                        <button class="up">▲</button>
+                        <button class="down">▼</button>
                     </div>
+                    <div class="empty-box"></div>
                 </div>
             </div>
         </div>
@@ -70,21 +91,31 @@
                 <div class="floor-number">Floor 2</div>
                 <div class="buttons">
                     <div class="control">
-                        <button class="up">Up</button>
-                        <button class="down">Down</button>
+                        <button class="up">▲</button>
+                        <button class="down">▼</button>
                     </div>
+                    <div class="empty-box"></div>
+                </div>
+                <div class="buttons">
                     <div class="control">
-                        <button class="up">Up</button>
-                        <button class="down">Down</button>
+                        <button class="up">▲</button>
+                        <button class="down">▼</button>
                     </div>
+                    <div class="empty-box"></div>
+                </div>
+                <div class="buttons">
                     <div class="control">
-                        <button class="up">Up</button>
-                        <button class="down">Down</button>
+                        <button class="up">▲</button>
+                        <button class="down">▼</button>
                     </div>
+                    <div class="empty-box"></div>
+                </div>
+                <div class="buttons">
                     <div class="control">
-                        <button class="up">Up</button>
-                        <button class="down">Down</button>
+                        <button class="up">▲</button>
+                        <button class="down">▼</button>
                     </div>
+                    <div class="empty-box"></div>
                 </div>
             </div>
         </div>
@@ -95,21 +126,31 @@
                 <div class="floor-number">Floor 3</div>
                 <div class="buttons">
                     <div class="control">
-                        <button class="up">Up</button>
-                        <button class="down">Down</button>
+                        <button class="up">▲</button>
+                        <button class="down">▼</button>
                     </div>
+                    <div class="empty-box"></div>
+                </div>
+                <div class="buttons">
                     <div class="control">
-                        <button class="up">Up</button>
-                        <button class="down">Down</button>
+                        <button class="up">▲</button>
+                        <button class="down">▼</button>
                     </div>
+                    <div class="empty-box"></div>
+                </div>
+                <div class="buttons">
                     <div class="control">
-                        <button class="up">Up</button>
-                        <button class="down">Down</button>
+                        <button class="up">▲</button>
+                        <button class="down">▼</button>
                     </div>
+                    <div class="empty-box"></div>
+                </div>
+                <div class="buttons">
                     <div class="control">
-                        <button class="up">Up</button>
-                        <button class="down">Down</button>
+                        <button class="up">▲</button>
+                        <button class="down">▼</button>
                     </div>
+                    <div class="empty-box"></div>
                 </div>
             </div>
         </div>
@@ -120,21 +161,31 @@
                 <div class="floor-number">Floor 4</div>
                 <div class="buttons">
                     <div class="control">
-                        <button class="up">Up</button>
-                        <button class="down">Down</button>
+                        <button class="up">▲</button>
+                        <button class="down">▼</button>
                     </div>
+                    <div class="empty-box"></div>
+                </div>
+                <div class="buttons">
                     <div class="control">
-                        <button class="up">Up</button>
-                        <button class="down">Down</button>
+                        <button class="up">▲</button>
+                        <button class="down">▼</button>
                     </div>
+                    <div class="empty-box"></div>
+                </div>
+                <div class="buttons">
                     <div class="control">
-                        <button class="up">Up</button>
-                        <button class="down">Down</button>
+                        <button class="up">▲</button>
+                        <button class="down">▼</button>
                     </div>
+                    <div class="empty-box"></div>
+                </div>
+                <div class="buttons">
                     <div class="control">
-                        <button class="up">Up</button>
-                        <button class="down">Down</button>
+                        <button class="up">▲</button>
+                        <button class="down">▼</button>
                     </div>
+                    <div class="empty-box"></div>
                 </div>
             </div>
         </div>
