--- a/Index.html
+++ b/Index.html
@@ -8,38 +8,14 @@
 </head>
 <body>
    
-     <div class="building">
+    <div class="building">
         <!-- Ground Floor -->
         <div class="floor" id="floor-0">
             <div class="floor-info">
                 <div class="floor-number">Ground Floor</div>
-                <div class="buttons">
-                    <div class="control">
-                        <button class="up">▲</button>
-                        <button class="down">▼</button>
-                    </div>
-                    <div class="empty-box"></div>
-                </div>
-                <div class="buttons">
-                    <div class="control">
-                        <button class="up">▲</button>
-                        <button class="down">▼</button>
-                    </div>
-                    <div class="empty-box"></div>
-                </div>
-                <div class="buttons">
-                    <div class="control">
-                        <button class="up">▲</button>
-                        <button class="down">▼</button>
-                    </div>
-                    <div class="empty-box"></div>
-                </div>
-                <div class="buttons">
-                    <div class="control">
-                        <button class="up">▲</button>
-                        <button class="down">▼</button>
-                    </div>
-                    <div class="empty-box"></div>
+                <div class="control-buttons">
+                    <button class="control-btn up">▲</button>
+                    <button class="control-btn down">▼</button>
                 </div>
             </div>
             <div class="lifts">
@@ -54,33 +30,9 @@
         <div class="floor" id="floor-1">
             <div class="floor-info">
                 <div class="floor-number">Floor 1</div>
-                <div class="buttons">
-                    <div class="control">
-                        <button class="up">▲</button>
-                        <button class="down">▼</button>
-                    </div>
-                    <div class="empty-box"></div>
-                </div>
-                <div class="buttons">
-                    <div class="control">
-                        <button class="up">▲</button>
-                        <button class="down">▼</button>
-                    </div>
-                    <div class="empty-box"></div>
-                </div>
-                <div class="buttons">
-                    <div class="control">
-                        <button class="up">▲</button>
-                        <button class="down">▼</button>
-                    </div>
-                    <div class="empty-box"></div>
-                </div>
-                <div class="buttons">
-                    <div class="control">
-                        <button class="up">▲</button>
-                        <button class="down">▼</button>
-                    </div>
-                    <div class="empty-box"></div>
+                <div class="control-buttons">
+                    <button class="control-btn up">▲</button>
+                    <button class="control-btn down">▼</button>
                 </div>
             </div>
         </div>
@@ -89,33 +41,9 @@
         <div class="floor" id="floor-2">
             <div class="floor-info">
                 <div class="floor-number">Floor 2</div>
-                <div class="buttons">
-                    <div class="control">
-                        <button class="up">▲</button>
-                        <button class="down">▼</button>
-                    </div>
-                    <div class="empty-box"></div>
-                </div>
-                <div class="buttons">
-                    <div class="control">
-                        <button class="up">▲</button>
-                        <button class="down">▼</button>
-                    </div>
-                    <div class="empty-box"></div>
-                </div>
-                <div class="buttons">
-                    <div class="control">
-                        <button class="up">▲</button>
-                        <button class="down">▼</button>
-                    </div>
-                    <div class="empty-box"></div>
-                </div>
-                <div class="buttons">
-                    <div class="control">
-                        <button class="up">▲</button>
-                        <button class="down">▼</button>
-                    </div>
-                    <div class="empty-box"></div>
+                <div class="control-buttons">
+                    <button class="control-btn up">▲</button>
+                    <button class="control-btn down">▼</button>
                 </div>
             </div>
         </div>
@@ -124,33 +52,9 @@
         <div class="floor" id="floor-3">
             <div class="floor-info">
                 <div class="floor-number">Floor 3</div>
-                <div class="buttons">
-                    <div class="control">
-                        <button class="up">▲</button>
-                        <button class="down">▼</button>
-                    </div>
-                    <div class="empty-box"></div>
-                </div>
-                <div class="buttons">
-                    <div class="control">
-                        <button class="up">▲</button>
-                        <button class="down">▼</button>
-                    </div>
-                    <div class="empty-box"></div>
-                </div>
-                <div class="buttons">
-                    <div class="control">
-                        <button class="up">▲</button>
-                        <button class="down">▼</button>
-                    </div>
-                    <div class="empty-box"></div>
-                </div>
-                <div class="buttons">
-                    <div class="control">
-                        <button class="up">▲</button>
-                        <button class="down">▼</button>
-                    </div>
-                    <div class="empty-box"></div>
+                <div class="control-buttons">
+                    <button class="control-btn up">▲</button>
+                    <button class="control-btn down">▼</button>
                 </div>
             </div>
         </div>
@@ -159,33 +63,9 @@
         <div class="floor" id="floor-4">
             <div class="floor-info">
                 <div class="floor-number">Floor 4</div>
-                <div class="buttons">
-                    <div class="control">
-                        <button class="up">▲</button>
-                        <button class="down">▼</button>
-                    </div>
-                    <div class="empty-box"></div>
-                </div>
-                <div class="buttons">
-                    <div class="control">
-                        <button class="up">▲</button>
-                        <button class="down">▼</button>
-                    </div>
-                    <div class="empty-box"></div>
-                </div>
-                <div class="buttons">
-                    <div class="control">
-                        <button class="up">▲</button>
-                        <button class="down">▼</button>
-                    </div>
-                    <div class="empty-box"></div>
-                </div>
-                <div class="buttons">
-                    <div class="control">
-                        <button class="up">▲</button>
-                        <button class="down">▼</button>
-                    </div>
-                    <div class="empty-box"></div>
+                <div class="control-buttons">
+                    <button class="control-btn up">▲</button>
+                    <button class="control-btn down">▼</button>
                 </div>
             </div>
         </div>
