--- a/Index.html
+++ b/Index.html
@@ -7,69 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   
-    <div class="building">
-        <!-- Ground Floor -->
-        <div class="floor" id="floor-0">
-            <div class="floor-info">
-                <div class="floor-number">Ground Floor</div>
-                <div class="control-buttons">
-                    <button class="control-btn up">▲</button>
-                    <button class="control-btn down">▼</button>
-                </div>
-            </div>
-            <div class="lifts">
-                <div class="lift" id="lift-1"></div>
-                <div class="lift" id="lift-2"></div>
-                <div class="lift" id="lift-3"></div>
-                <div class="lift" id="lift-4"></div>
-            </div>
-        </div>
-
-        <!-- Floor 1 -->
-        <div class="floor" id="floor-1">
-            <div class="floor-info">
-                <div class="floor-number">Floor 1</div>
-                <div class="control-buttons">
-                    <button class="control-btn up">▲</button>
-                    <button class="control-btn down">▼</button>
-                </div>
-            </div>
-        </div>
-
-        <!-- Floor 2 -->
-        <div class="floor" id="floor-2">
-            <div class="floor-info">
-                <div class="floor-number">Floor 2</div>
-                <div class="control-buttons">
-                    <button class="control-btn up">▲</button>
-                    <button class="control-btn down">▼</button>
-                </div>
-            </div>
-        </div>
-
-        <!-- Floor 3 -->
-        <div class="floor" id="floor-3">
-            <div class="floor-info">
-                <div class="floor-number">Floor 3</div>
-                <div class="control-buttons">
-                    <button class="control-btn up">▲</button>
-                    <button class="control-btn down">▼</button>
-                </div>
-            </div>
-        </div>
-
-        <!-- Floor 4 -->
-        <div class="floor" id="floor-4">
-            <div class="floor-info">
-                <div class="floor-number">Floor 4</div>
-                <div class="control-buttons">
-                    <button class="control-btn up">▲</button>
-                    <button class="control-btn down">▼</button>
-                </div>
-            </div>
-        </div>
+    <div id="form">
+        <label for="input-floors">Number of Floors:</label>
+        <input type="number" id="input-floors" min="1" value="4">
+        <label for="input-lifts">Number of Lifts:</label>
+        <input type="number" id="input-lifts" min="1" value="4">
+        <button id="input-btn">Start Simulation</button>
     </div>
+   
+    <div id="container" class="building">
+        <!-- Floors and lifts will be dynamically created here -->
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
